force-app/main/default/objects/Shoba_Default_Settings__mdt/Shoba_Default_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Shoba Default Settings</label>
    <pluralLabel>Shoba Default Settings</pluralLabel>
</CustomObject>