force-app/main/default/objects/Shoba_Default_Settings__mdt/fields/booking_cancellation_days__c.field-meta.xml
<CustomField>
    <fullName>booking_cancellation_days__c</fullName>
    <label>booking cancellation days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>