force-app/main/default/objects/Shoba_Default_Settings__mdt/fields/BookingForm_Siniya_Seller_Representative__c.field-meta.xml
<CustomField>
    <fullName>BookingForm_Siniya_Seller_Representative__c</fullName>
    <label>BookingForm Siniya Seller Representative</label>
    <length>18</length>
    <type>Text</type>
</CustomField>