force-app/main/default/objects/Shoba_Default_Settings__mdt/fields/Collection_Report_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Collection_Report_Account_Names__c</fullName>
    <label>Collection Report Account Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>