force-app/main/default/objects/Shoba_Default_Settings__mdt/fields/Default_Layout_Object__c.field-meta.xml
<CustomField>
    <fullName>Default_Layout_Object__c</fullName>
    <label>Default Layout Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
                <default>true</default>
                <label>Unit</label>
            </value>
            <value>
                <fullName>Unit Layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>