force-app/main/default/objects/Shoba_Default_Settings__mdt/fields/Mall_Stand_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Mall_Stand_Manager_Id__c</fullName>
    <label>Mall Stand Manager Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>