force-app/main/default/objects/Shoba_Default_Settings__mdt/fields/Payment_Community_Url__c.field-meta.xml
<CustomField>
    <fullName>Payment_Community_Url__c</fullName>
    <label>Payment Community Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>